<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="or">OR</string>
    <string name="enter_email">Enter Email</string>
    <string name="section_header">Section Header</string>
    <string name="label">Label</string>

    <string name="no_internet_message">Failed to connect, please check your internet connection.</string>
    <string name="search">Search</string>
    <string name="search_ellipsis">Search...</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="recommended">Recommended</string>
    <string name="end_of_season">End of Season</string>
    <string name="sale">Sale</string>
    <string name="upto">Upto</string>
    <string name="off">% Off</string>
    <string name="title">Title</string>
    <string name="static_location">Gurugram, Haryana</string>
    <string name="static_name">Ujjwal Varsney</string>
    <string name="address">Address</string>
    <string name="static_address">Ambiance Tower, Sector 44, Gurugram, Haryana PIN: 122003</string>
    <string name="contact">Contact</string>
    <string name="static_mobile">Mobile: +91 12345 67890</string>
    <string name="email_example_mail_com">Email: example@mail.com</string>
    <string name="orders">Orders</string>
    <string name="favourites">Favourites</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>

</resources>