<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ces.androidappkit.ui.home.FragmentDashBoard"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ces.androidappkit.ui.home.FragmentSearch"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.ces.androidappkit.ui.home.FragmentCart"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.ces.androidappkit.ui.home.FragmentCategories"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

</navigation>