<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.ces.androidappkit.ui.home.model.ModelSlider" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        tools:context=".ui.home.FragmentCart">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/primary_blue"
            android:paddingHorizontal="@dimen/_14sdp"
            android:paddingVertical="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_end_of_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_of_season"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:textColor="@color/white"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_of_season" />

            <TextView
                android:id="@+id/tv_upto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upto"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_percent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_percent"
                percentBinding="@{model.percent}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="60" />


            <TextView
                android:id="@+id/tv_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/off"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_percent"
                app:layout_constraintStart_toEndOf="@+id/tv_percent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_model"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/model"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>